[package]
name = "rustmpx"
version = "0.1.0"
edition = "2021"
authors = ["Cursor AI"]
description = "FM MPX generator with RDS/RDS2 (from scratch Rust rewrite)"
license = "MIT"

[features]
default = ["web"]
audio = ["dep:cpal", "dep:ringbuf"]
web = ["dep:axum", "dep:sqlx"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hound = "3.5.1"
cpal = { version = "0.15", optional = true }
axum = { version = "0.6", features = ["multipart"], optional = true }
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "vorbis", "aac", "isomp4", "wav"] }
ringbuf = { version = "0.3", optional = true }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio", "macros"], optional = true }
once_cell = "1.19"
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }