[package]
name = "rustmpx-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop app for rustmpx - FM MPX + RDS/RDS2"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13" }

[dependencies]
tauri = { version = "2.0.0-rc.13", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
cpal = "0.15"
ringbuf = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "vorbis", "aac", "isomp4", "wav"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
once_cell = "1.19"